<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="google_maps_key">enter api key here</string>
    <string name="google_places_key">enter api key here</string>

    <string name="app_name">MapLists</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="drawer_item_names">
        <item>Locations</item>
        <item>People</item>
        <item>Inventory</item>
        <item>Help</item>
    </string-array>


    <string name="add">Add</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="goto_location">Go to Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="drag_location">Drag Location</string>
    <string name="delete_location">Delete Location?</string>
    <string name="search_location">Search Location</string>


    <string name="secondary_lists">Secondary Lists</string>
    <string name="navigate_prior">Prior Location</string>
    <string name="navigate_next">Next Location</string>
    <string name="delete_confirm"> will be deleted along with all of its contents.</string>


    <string name="enter_address">ENTER AN ADDRESS</string>
    <string name="or">OR PLACE YOUR OWN</string>
    <string name="address_format">Number, Street, Town or City</string>
    <string name="button_add_location">Drop Marker At This Location</string>
    <string name="drop_marker_instructions">You can also just drop a Marker onto the map and drag it wherever you want</string>
    <string name="button_drop_marker">Just Drop A Marker</string>
    <string name="proceed">Proceed</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="add_field">Add Field</string>
    <string name="add_new_item">Add New Item</string>
    <string name="name">Name</string>
    <string name="new_location">New Location</string>
    <string name="snippet">Snippet</string>
    <string name="empty">Empty</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="empty_location_list">This location contains no items yet. \nPress the + button to begin adding some!</string>
    <string name="empty_schemas_list">You have no saved schemas yet.</string>
    <string name="no_image_loaded">No image loaded</string>
    <string name="couldnt_load_image">Could not load image</string>
    <string name="photo">Photo</string>
    <string name="subject">Subject</string>


    <!-- see AddListActivity getPrimaryFieldTypeString() if altering this list -->
    <string-array name="all_field_names">
        <item>Name</item>
        <item>Phone Number</item>
        <item>Email</item>
        <item>Date</item>
        <item>Time</item>
        <item>Date and Time</item>
        <item>URL</item>
        <item>Price</item>
        <item>Photo</item>
        <item>Item-List</item>
        <item>Price-List</item>
        <item>Text</item>
        <item>Message</item>
        <item>Number</item>
        <item>Decimal</item>
        <item>Dropdown</item>
        <item>Checkbox</item>
        <item>Rating</item>
    </string-array>

    <string-array name="all_field_images">
        <item>@array/primary_field_images</item>
        <item>@array/secondary_field_images</item>
    </string-array>


    <array name="primary_field_images">
        <item>@drawable/ic_name</item>
        <item>@drawable/ic_phonenumber</item>
        <item>@drawable/ic_email</item>
        <item>@drawable/ic_date</item>
        <item>@drawable/ic_time</item>
        <item>@drawable/ic_calendar_clock</item>
        <item>@drawable/ic_url</item>
        <item>@drawable/ic_price</item>
    </array>

    <array name="secondary_field_images">
        <item>@drawable/ic_photo</item>
        <item>@drawable/ic_list_black_24dp</item>
        <item>@drawable/ic_debt_add</item>
        <item>@drawable/ic_text</item>
        <item>@drawable/ic_comment</item>
        <item>@drawable/ic_number</item>
        <item>@drawable/ic_decimal</item>
        <item>@drawable/ic_dropdown</item>
        <item>@drawable/ic_checkbox</item>
        <item>@drawable/ic_rating</item>
    </array>


    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid Lat/Lon used</string>
    <string name="no_address_found">No Address Found, it may not be there anymore</string>
    <string name="address_found">Address Found</string>
    <string name="edit">"Edit "</string>
    <string name="add_lists_activity">AddLists</string>
    <string name="list_mode_activity">ListMode</string>
    <string name="secondary_list_activity">SecondaryList</string>
    <string name="manage_schemas_activity">ManageSchemas</string>
    <string name="add_list">Add List</string>
    <string name="cancel_add_list">Cancel Add List</string>
    <string name="schema">Schema</string>
    <string name="manage_schema">Manage Schemas</string>
    <string name="save_schema">Save Schema</string>
    <string name="schema_detected">Schema Detected</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="enter_name_for_schema">Enter a name for this schema and press Save to save it, or press Skip.</string>
    <string name="a_schema_already_exists">A schema already exists, either use it or enter a new name to create a new schema.</string>
    <string name="abandon_changes_text">Abandon all changes without saving?</string>
    <string name="abandon_changes">Abandon Changes?</string>
    <string name="display_title">Display this title in the list view</string>
    <string name="edit_title">Edit Title</string>
    <string name="pick_color">Pick Color</string>
    <string name="remove_list">Remove List</string>

    <!-- todo we're starting to accumulate alot of constants here.. consider adding a Constants file for these if we don't use them as strings.. -->
    <string name="default_marker_color">#303F9F</string>
    <string name="seekbar_min">1</string>
    <string name="seekbar_max_regular">5</string>
    <string name="seekbar_max_list_items">10</string>
    <string name="how_many">How many?</string>
    <string name="select_number_instr_1">Please select how many</string>
    <string name="select_number_instr_2">you want to add under this title.</string>
    <string name="default_schema_name">Default Schema</string>
    <string name="default_schema_id">0</string>
    <string name="default_list_id">-1</string>
    <string name="this_location">This location</string>



</resources>
