<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/divider_one"
        style="@style/DialogDivider" />

    <TextView
        android:id="@+id/enter_address_title"
        style="@style/DialogText.Center.Title"
        android:text="@string/enter_address" />

    <EditText
        android:id="@+id/enter_address_text"
        style="@style/DialogText.EditAddress"
        android:layout_below="@id/enter_address_title"
        android:hint="@string/address_format"
        android:layout_alignLeft="@+id/submit_address"
        android:layout_alignRight="@+id/submit_address"/>

    <Button
        android:id="@+id/submit_address"
        style="@style/DialogButton"
        android:layout_below="@+id/enter_address_text"
        android:text="@string/button_add_location" />

</RelativeLayout>