<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MapActivity">


    <group
        android:id="@+id/group_default_top"
        android:visible="true">

        <item
            android:id="@+id/action_enter_address"
            android:actionViewClass="android.support.v7.widget.SearchView"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_location"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_add"
            android:background="?attr/selectableItemBackground"
            android:icon="@drawable/ic_place_black_24dp"
            android:orderInCategory="200"
            android:title="@string/add"
            app:showAsAction="always" />

    </group>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
