<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sundown.maplists.activities.MainActivity">

    <group
        android:id="@+id/group_marker_components"
        android:visible="false">

        <item
            android:id="@+id/action_location_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:orderInCategory="200"
            android:title="@string/location_list"
            app:showAsAction="always" />


    </group>

    <group
        android:id="@+id/group_marker_move"
        android:visible="false">

        <item
            android:id="@+id/action_goto_location"
            android:icon="@drawable/ic_place_black_24dp"
            android:orderInCategory="200"
            android:title="@string/goto_location"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_drag_location"
            android:icon="@drawable/ic_open_with_black_24dp"
            android:orderInCategory="200"
            android:title="@string/drag_location"
            app:showAsAction="always" />

    </group>
    <group
        android:id="@+id/group_edit_delete"
        android:visible="false">

        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:orderInCategory="200"
            android:title="@string/edit_location"
            app:showAsAction="always" />


        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:orderInCategory="200"
            android:title="@string/delete_location"
            app:showAsAction="always" />

    </group>

</menu>