<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dialogBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <include
        android:id="@+id/enter_address"
        layout="@layout/enter_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <View
        android:id="@+id/divider_two"
        style="@style/DialogDivider"
        android:layout_below="@+id/enter_address" />

    <TextView
        style="@style/DialogText.Center.Title"
        android:layout_below="@+id/enter_address"
        android:text="@string/or" />

    <TextView
        android:id="@+id/drop_marker_instructions"
        style="@style/DialogText.Center"
        android:layout_below="@+id/divider_two"
        android:text="@string/drop_marker_instructions" />

    <Button
        android:id="@+id/drop_marker"
        style="@style/DialogButton"
        android:layout_below="@+id/drop_marker_instructions"
        android:text="@string/button_drop_marker" />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>