<?xml version="1.0" encoding="utf-8"?>
<com.sundown.maplists.views.EditLocationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="com.sundown.inventory.views"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editLocationRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/dialogBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snippet" />

            <EditText
                android:id="@+id/snippetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/photoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proceed" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</com.sundown.maplists.views.EditLocationView>